[package]
name = "dmw3-util"
version = "0.1.0"
edition = "2021"

[depdendancies]
rlen = { path = "./rlen" }
pack = { path = "./pack" }
model = { path = "./model" }
structs = { path = "./structs" }
tim = { path = "./tim" }
grid = { path = "./grid" }

[workspace]
members = [ 
  "structs",
  "pack", 
  "model",
  "rlen",
  "tim"
, "grid"]
