[package]
name = "dmw3-util"
version = "0.1.0"
edition = "2021"

[dependencies]
rlen = { path = "./rlen" }
tim = { path = "./tim" }
dmw3_pack = { path = "./pack" }
dmw3_model = { path = "./model" }
dmw3_structs = { path = "./structs" }
dmw3_lang = { path = "./lang" }

[workspace]
members = [ 
  "structs",
  "pack", 
  "model",
  "rlen",
  "tim",
  "grid",
  "lang",
  "consts"]
